Bug 1250718 - Improve layer logging for preserve-3d layers. r=thinker